--- a/index.html
+++ b/index.html
@@ -25,14 +25,25 @@
         </nav>
         <!-- text -->
         <div class="text-container">
-            <p>Salut,</p>
-            <p>Je suis Matt Cornic</p>
-            <p>Je suis developpeur <br>et designer</p>
-            <button class="hire-btn">des</button>
-            <button class="down-cv">CV</button>
+            <p>Developpeur Web</p>
+            <p>Developpeur Mobile</p>
+            <p>UI &<br>UX designer</p>
+            <button class="hire-btn">effacer</button>
+            <button class="down-cv">effacer</button>
         </div>
         <!-- model -->
-        <img src="/image/LAAMIMAT-Rarib.png" class="model" alt="portrait">
+        <!-- <img src="/image/LAAMIMAT-Rarib.png" class="model" alt="portrait"> -->
+        <div class="html">HTML</div>
+        <div class="css">CSS</div>
+        <div class="javaScript">JavaScript</div>
+        <div class="Boostrsap">Bootstrap</div>
+        <div class="node-js">nodeJS</div>
+        <div class="symfony">Symfony</div>
+        <div class="swift">Swift</div>
+        <div class="PHP">PHP</div>
+        <div class="mysql">MySql</div>
+
+
 
     </section>
     <!-- about-section -->
@@ -41,12 +52,16 @@
         <img src="/image/LAAMIMAT-Rarib.png" alt="portrait">
         <!-- about-text -->
         <div class="about-text">
-            <p>About me</p>
+            <p>Rarib LAAMIMAT</p>
             <p>Developer web & web mobile</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi sequi dolorem itaque eaque! Iure odio, laudantium, nemo porro quas fugit architecto nihil inventore modi maxime sint facilis. Sint, veniam quasi.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora temporibus quia eos minima sint assumenda omnis velit qui recusandae provident suscipit impedit illum at quasi, inventore nulla animi, expedita incidunt?</p>
+            <p>Passionné de mathématique et de sciences en générale j'ai opté pour une reconversion dans le domaine informatique et du développement d'aplication. Désormais produire ou s'épanouir, il faut choisir ne me concerne plus car je suis autant productif qu'épanouit</p>
+            <p>Language de programmation</p>
+            <p> Javascript, Php, Swift </p>
+            <p>Framework</p>
+            <p>Node.js, Symfony, Bootstrap, jquery...</p>
             <!-- button -->
-            <button>Hire Me</button>
+
+            <button>En savoir plus</button>
             <button>Download Resume</button>
         </div>
 
@@ -56,8 +71,8 @@
         <!-- text -->
         <div class="services-text">
         <p>Services</p>
-        <p>Services required</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium nobis minus sequi consequatur, porro, illo saepe obcaecati autem excepturi ratione necessitatibus enim deleniti rerum ea quam repellat ullam. Obcaecati, nihil?</p>
+        <p>Nos Services</p>
+        <p>Nous réalisons vos sites entierement ou partiellement. Notre equipe est à votre disposition pour tout renseignement et précision.</p>
         </div>
         <!-- box -->
         <div class="box-container">
@@ -65,22 +80,22 @@
             <div class="box-1">
             <span>1</span>
             <p class="heading">Web Desing</p>
-            <p class="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, fuga. Saepe vitae beatae cupiditate eveniet consectetur nostrum dolore dolorum eos expedita. Reprehenderit libero dolore eos repudiandae sequi dolorem, iste sint?</p>
-            <button>Read More</button>
+            <p class="details">Si vous ne savez pas quoi choisir nous vous accompagnons pour réaliser le desing qui vous satisfera et qui correspondra à l'image de votre société, de vos produits ou de votre personne</p>
+            <button>En savoir plus</button>
             </div>
             <!-- 2 -->
             <div class="box-2">
             <span>2</span>
             <p class="heading">Web Development</p>
-            <p class="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, fuga. Saepe vitae beatae cupiditate eveniet consectetur nostrum dolore dolorum eos expedita. Reprehenderit libero dolore eos repudiandae sequi dolorem, iste sint?</p>
-            <button>Read More</button>
+            <p class="details">Le site peut etre intégré et développer par notre equipe nous réalisons nos projets aussi bien avec Php ou le framework Symfony ou l'environnement JavaScript nodeJS </p>
+            <button>En savoir plus</button>
             </div>
             <!-- 3 -->
             <div class="box-3">
             <span>3</span>
-            <p class="heading">Security/SEO</p>
-            <p class="details">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, fuga. Saepe vitae beatae cupiditate eveniet consectetur nostrum dolore dolorum eos expedita. Reprehenderit libero dolore eos repudiandae sequi dolorem, iste sint?</p>
-            <button>Read More</button>
+            <p class="heading">Securité/SEO</p>
+            <p class="details">La sécurité est primordiale nos sites sont entierement sécurtisé de sorte à ne pas subir d'intrusion néfaste. Le référencement google est optimisé aux maximum</p>
+            <button>En savoir plus</button>
             </div>
         </div>
 
@@ -92,17 +107,17 @@
     </div>
     <!-- footer -->
     <footer>
-        <p>going to internet</p>
-        <p> I makeas soon as possibale. You really like my work, if you don't I change this until you like I give you satisfaction result</p>
+        <p>Let's go</p>
+        <p> Satisfait ou retravaillé, si le résultat ne vous plait pas nous le retravaillons de sorte à obtenir votre entière satisfaction</p>
         <!-- social -->
         <div class="social-icons">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
-        <!-- copyright -->
-        <p class="copyright">Copyright by Going-To Internet</p>
+       
     </footer>
     <!-- attached social bar -->
     <div class="a-social-b">
@@ -110,7 +125,10 @@
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
     </div>
+     <!-- copyright -->
+     <p class="copyright">Copyright by Matt Cornic Dev</p>
 
 </body>
 </html>
