--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			class="about-container">
 			<!-- image -->
 			<img
-			src="./image/LAAMIMAT-Rarib.png" alt="portrait">
+			src="/image/LAAMIMAT-Rarib.png" alt="portrait">
 			<!-- about-text -->
 			<div class="about-text">
 				<p>Rarib LAAMIMAT</p>
