--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="../style.css">
 		<title>Portfolio</title>
 		<!-- Using-FontAwsome-->
 		<script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
@@ -46,14 +46,8 @@
                 <p>Bootstrap</p>
                 <p>HTML</p>
             </div>
-			<!-- model -->
-			<!-- <img src="/image/LAAMIMAT-Rarib.png" class="model" alt="portrait"> -->
-
 			<!--  mot -->
-
-
 				<span class="glow">Matt Cornic Dev</span>
-
 
 		</section>
 		<!-- about-section -->
