--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="../style.css">
+		<link rel="stylesheet" href="style.css">
 		<title>Portfolio</title>
 		<!-- Using-FontAwsome-->
 		<script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
@@ -55,7 +55,7 @@
 			class="about-container">
 			<!-- image -->
 			<img
-			src="/image/LAAMIMAT-Rarib.png" alt="portrait">
+			src="image/LAAMIMAT-Rarib.png" alt="portrait">
 			<!-- about-text -->
 			<div class="about-text">
 				<p>Rarib LAAMIMAT</p>
