--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a href="#" class="logo">MCD</a>
 				<!-- menu -->
 				<ul>
-					<li><a href="#" class="active">Accueil</a></li>
+					<li><a href="#">Accueil</a></li>
 					<li><a href="#">A propos</a></li>
 					<li><a href="#">Contactez moi</a></li>
 					<li><a href="#">Equipe</a></li>
@@ -108,7 +108,7 @@
 					<button>En savoir plus</button>
                 </div>
                 <!-- 4 -->
-				<div class="box-3">
+				<div class="box-4">
 					<i class="fas fa-server"></i>
 					<p class="heading">Hébergement</p>
 					<p class="details">Mise en place d'hébergements mutualisés ou VPS spécifique à vos besoins ou votre application web.</p>
